@@ -1,3 +1,14 @@
+2010-10-26  Jean Delvare  <khali@linux-fr.org>
+
+	Update to support Intel AP-485 (CPUID) revision 36 (was 32).
+
+	* dmidecode.c: Update the link to the AP-485 document, the revision
+	  and the table number.
+	* dmidecode.c: Update two CPU flag descriptions (FXSR and HTT).
+	  Drop CPU flag IA64.
+	* dmidecode.c: Update the list of processors for which we decode the
+	  CPUID flags.
+
 2010-10-11  Jean Delvare  <khali@linux-fr.org>
 
 	* dmidecode.c: One more SMBIOS version fix-up case.
